--- a/.config/ripgrep/.ripgreprc
+++ b/.config/ripgrep/.ripgreprc
@@ -4,6 +4,7 @@
 
 # ignores case unless search is made with uppercase
 --smart-case
+--hidden
 
 # https://github.com/BurntSushi/ripgrep/blob/master/FAQ.md#silver-searcher-output
 --colors=line:fg:yellow
