--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -15,6 +15,7 @@ window:
     x: 5
     y: 5
   decorations: full
+  opacity: 0.95
 
 scrolling:
   history: 100000
@@ -51,44 +52,64 @@ font:
 
 draw_bold_text_with_bright_colors: false
 
+# Copyright (c) 2017-present Arctic Ice Studio <development@arcticicestudio.com>
+# Copyright (c) 2017-present Sven Greb <code@svengreb.de>
+
+# Project:    Nord Alacritty
+# Version:    0.1.0
+# Repository: https://github.com/arcticicestudio/nord-alacritty
+# License:    MIT
+# References:
+#   https://github.com/alacritty/alacritty
+
 colors:
   primary:
-    background: "0x26282a"
-    foreground: "0xf0f0f0"
+    background: "#2e3440"
+    foreground: "#d8dee9"
+    dim_foreground: "#a5abb6"
   cursor:
-    text: "0x272822"
-    cursor: "0xf8f8f0"
+    text: "#2e3440"
+    cursor: "#d8dee9"
   vi_mode_cursor:
-    text: "0x272822"
-    cursor: "0xf8f8f0"
-  normal:
-    black: "0x26282a"
-    red: "0xff8878"
-    green: "0xb4fb73"
-    yellow: "0xfffcb7"
-    blue: "0x8bbce5"
-    magenta: "0xffb2fe"
-    cyan: "0xa2e1f8"
-    white: "0xf1f1f1"
-  bright:
-    black: "0x6f6f6f"
-    red: "0xfe978b"
-    green: "0xd6fcba"
-    yellow: "0xfffed5"
-    blue: "0xc2e3ff"
-    magenta: "0xffc6ff"
-    cyan: "0xc0e9f8"
-    white: "0xffffff"
+    text: "#2e3440"
+    cursor: "#d8dee9"
+  selection:
+    text: CellForeground
+    background: "#4c566a"
   search:
     matches:
-      foreground: "#000000"
-      background: "#FFD73F"
-    colors.footer_bar:
-      background: "#c5c8c6"
-      foreground: "#1d1f21"
-  selection:
-    text: "#263137"
-    background: "#FFD73F"
+      foreground: CellBackground
+      background: "#88c0d0"
+  footer_bar:
+    background: "#434c5e"
+    foreground: "#d8dee9"
+  normal:
+    black: "#3b4252"
+    red: "#bf616a"
+    green: "#a3be8c"
+    yellow: "#ebcb8b"
+    blue: "#81a1c1"
+    magenta: "#b48ead"
+    cyan: "#88c0d0"
+    white: "#e5e9f0"
+  bright:
+    black: "#4c566a"
+    red: "#bf616a"
+    green: "#a3be8c"
+    yellow: "#ebcb8b"
+    blue: "#81a1c1"
+    magenta: "#b48ead"
+    cyan: "#8fbcbb"
+    white: "#eceff4"
+  dim:
+    black: "#373e4d"
+    red: "#94545d"
+    green: "#809575"
+    yellow: "#b29e75"
+    blue: "#68809a"
+    magenta: "#8c738c"
+    cyan: "#6d96a5"
+    white: "#aeb3bb"
 
 # Bell
 #
@@ -130,12 +151,6 @@ colors:
 #     args: ["Hello, World!"]
 #
 #command: None
-
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-#background_opacity: 1.0
 
 #selection:
 # This string contains all characters that are used as separators for "semantic words" in Alacritty.
