--- a/.gitconfig
+++ b/.gitconfig
@@ -32,5 +32,7 @@
 [pull]
     rebase = false
 [init]
-    templateDir = ~/.git-template
+    templateDir = $HOME/.git-template
 	defaultBranch = main
+[core]
+	excludesfile = $HOME/.gitignore_global
