--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,25 +1,8 @@
-#unbind C-b
-#set-option -g prefix C-a
-#bind-key C-a send-prefix
-
 set-window-option -g mode-keys vi
 
-# Start windows and panes at 1, not 0
-#set -g base-index 1
-#setw -g pane-base-index 1
 # automatically renumber windows when somee are closed
-#set -g renumber-windows on
-# changing window order
-#bind -r "<" swap-window -d -t -1
-#bind -r ">" swap-window -d -t +1
-
-#bind | split-window -h -c "#{pane_current_path}"
-#bind - split-window -v -c "#{pane_current_path}"
-#unbind '"'
-#unbind %
-
-#bind r source-file ~/.tmux.conf
-#bind P paste-buffer
+set -g renumber-windows on
+set -g base-index 1
 
 # Undercurl
 set -g default-terminal "${TERM}"
@@ -35,39 +18,42 @@ set -g @yank_selection 'clipboard'
 set -g @yank_selection_mouse 'clipboard'
 set -g @yank_action 'copy-pipe'
 
-if-shell 'test ! -z `which powerline-daemon`' 'run-shell "powerline-daemon -q --replace"'
-if-shell 'test ! -z `which powerline-config`' 'run-shell "powerline-config tmux setup"'
+set-option -g clock-mode-style 12
+#if-shell 'test ! -z `which powerline-daemon`' 'run-shell "powerline-daemon -q --replace"'
+#if-shell 'test ! -z `which powerline-config`' 'run-shell "powerline-config tmux setup"'
 
 #source $HOME/.local/pipx/venvs/powerline-status/lib/python3.10/site-packages/powerline/bindings/tmux/powerline.conf
-
-# allow nested tmux sessions
-# bind -T root F12  \
-#      if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
-#      set prefix None \;\
-#      set key-table off \;\
-#      set status off \;\
-#      refresh-client -S \;\
-
-#  bind -T off F12 \
-#      set -u prefix \;\
-#      set -u key-table \;\
-#      set status on \;\
-#      refresh-client -S \;\
-
+setenv -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'brennanfee/tmux-paste'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
+#set -g @plugin 'brennanfee/tmux-paste'
+#set -g @plugin 'tmux-plugins/tmux-copycat'
+#set -g @plugin 'tmux-plugins/tmux-pain-control'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
-# run '~/.tmux/plugins/tpm/tpm'
+#set -g @nord_tmux_show_status_content '0'
+set -g status-right-length 100
+# TODO: need to edit .tmux/plugins/nord-tmux/src/nord-status-content.conf
+set -g @plugin 'arcticicestudio/nord-tmux'
+#set -ga status-right bar
+run '~/.tmux/plugins/tpm/tpm'
+#set -g status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_DATE_FORMAT} #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_TIME_FORMAT} #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] #H "
+#set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+#set-option -g status-right '#H #[fg=green]%I:%M #[fg=aqua]%m.%d.%Y'
+#set -goq @themepack-status-left-area-left-format "#S"
+#set -goq @themepack-status-left-area-middle-format "#(whoami)"
+#set -goq @themepack-status-left-area-right-format "#I:#P"
+#set -goq @themepack-status-right-area-left-format "%H:%M:%S"
+#set -goq @themepack-status-right-area-middle-format "%d-%b-%y"
+#set -goq @themepack-status-right-area-right-format "#H"
+#run -b '~/.tmux/plugins/tpm/tpm'
+# tmux run-shell ~/.tmux/plugins/nord-tmux/nord.tmux
+#source-file "$_current_dir/$NORD_TMUX_STATUS_CONTENT_FILE"
+#source-file .config/powerline/themes/tmux/default.json
 
-# resources
-# https://dev.to/iggredible/useful-tmux-configuration-examples-k3g
-# https://github.com/samoshkin/tmux-config
-
+#set -g status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_DATE_FORMAT} #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_TIME_FORMAT} #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] #H "
 
 # =====================================
 # ===    Appearence and status bar  ===
@@ -94,8 +80,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # # when window has monitoring notification
 # setw -g window-status-activity-style "fg=$color_main"
 
-# # outline for active pane
-# setw -g pane-active-border-style "fg=$color_main"
+# outline for active pane
+#setw -g pane-active-border-style "fg=$color_main"
 
 # # general status bar settings
 # set -g status on
