--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,9 @@
+Host dewf.net
+   HostName dewf.net
+   Ciphers +aes256-cbc
+   User doug
+   IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
+
 Host *
    HostkeyAlgorithms +ssh-rsa
    PubkeyAcceptedAlgorithms +ssh-rsa
