--- a/.config/i3/config
+++ b/.config/i3/config
@@ -466,15 +466,15 @@ for_window [class="urxvt"] border pixel 1
 # Define colors variables:
 set $darkbluetrans	#08052be6
 set $darkblue		#08052b
-set $lightblue		#5294e2
+set $lightblue		#88c0d0
 set $urgentred		#e53935
-set $white		#ffffff
+set $white		#81a1c1
 set $black		#000000
-set $purple		#e345ff
-set $darkgrey		#383c4a
-set $grey		#b0b5bd
-set $mediumgrey		#8b8b8b
-set $yellowbrown	#e1b700
+set $purple		#b48ead
+set $darkgrey	#3b4252
+set $grey	#a5abb6 
+set $mediumgrey	#b0b5bd
+set $yellowbrown	#ebcb8b
 
 # define colors for windows:
 #class		        	border		bground		text		indicator	child_border
@@ -490,7 +490,7 @@ client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 # Start i3bar to display a workspace bar
 # (plus the system information i3status finds out, if available)
 bar {
-		font pango: Noto Sans Regular 10
+		font pango: Hack Nerd Font Regular 10
 		status_command i3blocks -c ~/.config/i3/i3blocks.conf
 	    	position top
 #	    	i3bar_command i3bar --transparency
