--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,10 +1,9 @@
 shell:
-  program: /bin/bash
+  program: /bin/sh
   args:
-    - .bin/exec_first_found.sh
-    - tmux
-    - zsh --login
-    - bash --login
+    - --login
+    - -c
+    - "tmux attach-session -t $USER || tmux new-session -s $USER"
 
 window:
   dimensions:
