--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,7 +17,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 
 set -g @plugin 'arcticicestudio/nord-tmux'
-run '~/.tmux/plugins/tpm/tpm'
+run '$HOME/.tmux/plugins/tpm/tpm'
 
 # automatically renumber windows when some are closed
 set -g renumber-windows on
